Change background cover

--- a/css/style.css
+++ b/css/style.css
@@ -6365,7 +6365,7 @@ div.loading img {
 
 .header-two, .header-three {
   padding-top: 30px;
-  background: url("../img/folding-bg2.jpg");
+  background: url("../img/back_code.jpg");
   background-color: #B22837;
   background-position: top;
   background-repeat: no-repeat;
