Create componente for the page

--- a/assets/scss/components/_socials.scss
+++ b/assets/scss/components/_socials.scss
@@ -60,7 +60,7 @@
   a.flickr:hover      {background-color: #ff0084;}
   a.pinterest:hover   {background-color: #cc2127;}
   a.reddit:hover      {background-color: #ff4500;}
-  a.dribbble:hover    {background-color: #ea4c89;}
+  a.github:hover    {background-color: #269f42;}
   a.skype:hover       {background-color: #00aff0;}
   a.instagram:hover   {background-color: #517fa4;}
   a.lastfm:hover      {background-color: #c3000d;}
